contrib/print/_content.sass
#content

  hr
    border: 0
    height: 0
    margin: ($base_font_size * 3) 0
    width: 100%
    &:after
      color: $base_font_color
      content: ". . ."
      display: block
      font-size: $base_font_size * 2
      font-weight: $bold_font_weight
      position: relative
      text-align: center
      top: $base_font_size * -2

  p
    +prefixer(hyphens, auto, webkit moz ms spec)
    line-height: $normal_line_height
    margin: 0
    text-align: justify
    text-indent: $tab_width

  .keywords p
    margin-top: $base_font_size

  .lead p
    font-style: italic
    margin: ($base_font_size * 2) 0 ($base_font_size * 2) (2 * $tab_width)
    text-indent: 0
    i, em
      font-style: normal

  ul, li
    margin: 0
    padding: 0

  li
    margin-left: $tab_width
    p
      text-indent: 0

  ul.references
    li
      list-style-type: none
      margin-left: 0
      margin-top: $base_font_size
      p
        line-height: $single_line_height
        margin: 0
        text-align: left

